# rc_car_robomaker

./: .gitignore  LICENSE  README.md  roboMakerSettings.json
robot_ws/src/rbcar_twist2ack/: CMakeLists.txt
robot_ws/src/rover_control/: CMakeLists.txt  package.xml
robot_ws/src/rover_control/launch/: rc_control_gazebo.launch  rc_control_gazebo_robomaker.launch
robot_ws/src/rover_monitor/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/rover_monitor/config/: cloudwatch_metrics_config.yaml  health_metrics_config.yaml
robot_ws/src/rover_monitor/launch/: monitor.launch
robot_ws/src/rover_monitor/nodes/: monitor_obstacle_distance.py  monitor_speed.py
robot_ws/src/rover_teleop/: CMakeLists.txt  package.xml
robot_ws/src/rover_teleop/launch/: rover_dbw.launch  rover_robomaker.launch  rover_teleop.launch
simulation_ws/src/ouster_description/: package.xml
simulation_ws/src/ouster_description/rviz/: example.rviz
simulation_ws/src/ouster_description/tests/: os1_gazebo.test
simulation_ws/src/ouster_description/urdf/: OS1-64.urdf.xacro  example.urdf.xacro
simulation_ws/src/ouster_description/worlds/: os-1-64.world
simulation_ws/src/ouster_gazebo_plugins/: CMakeLists.txt  package.xml
simulation_ws/src/rover_description/: CMakeLists.txt  package.xml
simulation_ws/src/rover_description/urdf/: racecar.gazebo
simulation_ws/src/rover_gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/rover_gazebo/launch/walker/: rc_robomaker.lauch
simulation_ws/src/rover_gazebo/rviz/: rover_cam_os1.rviz
