<?xml version="1.0"?>
<package>
  <name>ouster_description</name>
  <version>1.0.7</version>
  <description>
    URDF and meshes describing Ouster laser scanners.
  </description>

  <license>BSD</license>
  <author>Wil Selby</author>
  <maintainer email="accounts@wilselby.com">Wil Selby</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <test_depend>rostest</test_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>ouster_gazebo_plugins</run_depend>
  <run_depend>rviz</run_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
