<?xml version="1.0"?>
<package>
  <name>ouster_gazebo_plugins</name>
  <version>1.0.7</version>
  <description>
    Gazebo plugin to provide simulated data from Ouster laser scanners.
  </description>

  <license>BSD</license>
  <author>Wil Selby</author>
  <maintainer email="accounts@wilselby.com">Wil Selby</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>rviz</run_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <export>
  </export>

</package>
