<?xml version="1.0"?>
<package>
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>Simulation Package for a DIY Driverless Vehicle based on the ClearPath Robotics Husky Vehicle</description>

  <license>BSD</license>

  <maintainer email="wil@wilselby.com">Wil Selby</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_controller</run_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <run_depend>teleop_twist_keyboard</run_depend>

  <run_depend>ouster_description</run_depend>

  <export>
  </export>

</package>
